--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
     </head>
     <body>
         <header class="header">
-            text...
+            <div class="logobox">
+                <img src="img/logo-white.png" alt="logo" class="logo">
+            </div>
+
+            <h1 class="headingprimary">
+                <span class="heading-primary-main">
+                    Outdoors
+                </span>
+                <span class="heading-primary-sub">
+                    is where life happens
+                </span>
+            </h1>
         </header>
         
         
